--- a/index.html
+++ b/index.html
@@ -12,14 +12,17 @@
   </header>
   <main id="main-content">
     <div id="main-body">
+      <p id="survey-title">Marketing Survey</p>
       <h2>Choose an item you would like to see in our catalog</h2>
       <div id="images"></div>
       <div id="button-div"></div>
     </div>
-  <canvas id="bar-chart"></canvas>
-  <br>
-  <h3>Number of times each item was displayed</h3>
-  <canvas id="donut-chart"></canvas>
+    <div id="charts">
+      <canvas id="bar-chart"></canvas>
+      <br>
+      <h3>Number of times each item was displayed</h3>
+      <canvas id="donut-chart"></canvas>
+    </div>
   </main>
   <footer>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.js"></script>
