--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <main id="main-content">
     <div id="main-body">
       <p id="survey-title">Marketing Survey</p>
-      <h2>Choose an item you would like to see in our catalog</h2>
+      <h2 id="prompt"></h2>
       <div id="images"></div>
       <div id="button-div"></div>
     </div>
